crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_enum_left_recursion.txt
E = [
  Left: (E)
  Right: (x)
]
==== diagnostics ====
error: infinite recursion: cycle consumes no input
 --> query.ptk:2:10
  |
2 |   Left: (E)
  |          ^
  |          |
  |          references itself
  |
help: recursive references must consume input before recursing
==== symbols ====
E
  E (cycle)
